--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,11 +2,12 @@
 $white: #fff;
 $black: #000;
 
-$primary: #0028db;
-$secondary: #4b7bff;
-$light: #f9f2cf;
-$danger: #f60063;
-$fancy: #df6bed;
+$primary: #ED0456;
+$secondary: #62A3C1;
+
+$light: #FFF9FA;
+$leather: #2D332B;
+$dark: #000500;
 
   // GRID VARIABLES
 $grid-max-columns: 12;
